# diploma

./: .gitignore
lib/: pyproject.toml
lib/src/magnetic_models/: __init__.py  magnetic_models.py  utils.py
lib/src/magnetic_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
