[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magnetic-models"
version = "0.1.2"
authors = [
  { name="Laszlo Erik Fritsch", email="fryc@outlook.com" },
]
description = "Tight-binding implementation of 2D Topological Insulators coupled to magnetic layers."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
    "sisl",
]

[tool.setuptools.packages.find]
where = ["src"]